[package]
name          = "str"
version       = "0.1.3"
license       = "MIT"
authors       = ["mitum <dangcheng@hotmail.com>"]
description   = "string extension"
homepage      = "https://github.com/mcorce/str"
repository    = "https://github.com/mcorce/str"
readme        = "README.md"
keywords      = ["str", "string"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]

[dependencies]
